<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/formequiz"
    android:orientation="vertical"
    tools:context=".Quiz5FR">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/QuestionNumber5f"
        android:text="1/8 Question"
        android:fontFamily="@font/baloo"

        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginLeft="8dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:text="SelectedOption"
            android:id="@+id/select_option5f"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/CorrectAnswer5f"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:fontFamily="@font/baloo"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="Correct Answer"
            android:textAlignment="center"
            android:textColor="#4CAF50" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:background="@drawable/cornerss"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="70dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/astro"
            android:id="@+id/imagee5f"
            android:visibility="gone" />

        <TextView
            android:id="@+id/Question5f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:fontFamily="@font/baloo"
            android:text="@string/question1"
            android:textColor="@color/white"
            android:textSize="25sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/optioni5f"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageView105i"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:background="@drawable/corn"
                android:src="@drawable/dog" />

            <ImageView
                android:id="@+id/imageView205i"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:background="@drawable/corn"
                android:src="@drawable/dog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageView305i"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/corn"
                android:layout_height="80dp"
                android:src="@drawable/dog" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:src="@drawable/dog"
                android:background="@drawable/corn"
                android:id="@+id/imageView405i" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/TextOptions5f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/optiondesign3"

            android:paddingTop="14dp">

            <TextView
                android:id="@+id/Option105"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/baloo"
                android:text="@string/question1_A"
                android:textAlignment="center"
                android:textColor="#FF61B9"
                android:textSize="25sp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/optiondesign3"

            android:paddingTop="14dp">

            <TextView
                android:id="@+id/Option205"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/baloo"
                android:text="@string/question1_B"
                android:textAlignment="center"
                android:textColor="#FF61B9"
                android:textSize="25sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/optiondesign3"

            android:paddingTop="14dp">

            <TextView
                android:id="@+id/Option305"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/baloo"
                android:text="@string/question1_C"
                android:textAlignment="center"
                android:textColor="#FF61B9"
                android:textSize="25sp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/optiondesign3"

            android:paddingTop="14dp">

            <TextView
                android:id="@+id/Option405"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/baloo"
                android:text="@string/question1_D"
                android:textAlignment="center"
                android:textColor="#FF61B9"
                android:textSize="25sp" />
        </FrameLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/baloo"
            android:layout_marginRight="11dp"
            android:text="Score 0/8"
            android:id="@+id/score5f"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </RelativeLayout>

    <ProgressBar
        android:layout_marginTop="10dp"
        android:id="@+id/progress_barr5f"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/optiondesign3"
        android:indeterminate="false"
        android:max="100"
        android:outlineSpotShadowColor="#FF61B9"
        android:progress="1" />

</LinearLayout>